# sif

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: actions.yml
benches/: bench.rs
src/: adjacencies.rs  binary_heap.rs  depth_first.rs  digraph.rs  homomorphism.rs  in_graph.rs  insert_graph.rs  lib.rs  map.rs  out_graph.rs  test_distance.rs
src/model/: dense.rs  dense_bi_adjacency_list.rs  dense_edge_list.rs  dense_in_adjacency_list.rs  dense_out_adjacency_list.rs  immutable_in_adjacency_list.rs  immutable_out_adjacency_list.rs  index.rs  isomorphic_from.rs  key.rs  mod.rs  sparse.rs  sparse_bi_adjacency_list.rs  sparse_edge_list.rs  sparse_in_adjacency_list.rs  sparse_out_adjacency_list.rs  tensor_product.rs  test_graph.rs
