[package]
name = "sif"
version = "0.1.0"
authors = ["Chris Bowen <4783294+cbbowen@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[features]
sif_index_niche = []

[dependencies]
itertools = "0.14"

[dev-dependencies]
criterion = "0.7"
proptest = "1.7"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true